# cvr-mods

./: .gitignore  .gitmodules  CVRMods.sln  Config.cs  Directory.Build.props  LICENSE  MenuOverrenderer.cs  MenuOverrenderer.csproj  MenuOverrenderer.sln  MenuReRender.cs  MenuReRender.csproj  MethodPatcher.cs  PersistentObjectFinder.cs  README.md  RenderReplacer.cs  StickyMenu.csproj  StickyMenuMod.cs  nuget.config
.github/workflows/: publish.yml
MenuReRender/: .gitignore  MenuReRender.cs  MenuReRender.sln  README.md
MenuReRender/Resources/: bundleassets.ps1
MenuReRender/Resources/Assets/: ui.shader
Properties/: AssemblyInfo.cs
Resources/: bundleassets.cmd  bundleassets.sh
Resources/Assets/: default.unity  ui.mat  ui.shader
Resources/Assets/Editor/: EditorBundleAssets.cs
Resources/ProjectSettings/: ProjectSettings.asset
StickyMenu/: .gitignore  LICENCE  PersistentObjectFinder.cs  README.md  StickyMenu.csproj  StickyMenu.sln
lib/: fetchdependencies.ps1
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/Assets/: ui.shader
res/Assets/Bundle/: menurerender.bundle  menurerender.bundle.manifest
src/AutoReConnect/: AutoReConnect.cs  AutoReConnect.csproj
src/CameraViewers/: CameraViewers.cs  CameraViewers.csproj  README.md
src/CameraViewers/plugin/: CMakeLists.txt  CMakePresets.json  vcpkg.json
src/CameraViewers/plugin/src/: CMakeLists.txt  main.cpp  test.cpp
src/CameraViewers/plugin/src/test/: CMakeLists.txt  GLCommon.hpp  Resources.hpp.in  test.cpp
src/CameraViewers/plugin/src/test/shaders/: test.fs  test.vs
src/CameraViewers/viewer/: Cargo.toml
src/CameraViewers/viewer/src/: external_image.rs  main.rs  platform.rs  window.rs
src/MenuReRender/: MenuReRender.cs  MenuReRender.csproj  README.md  RenderReplacer.cs
src/StickyMenu/: MethodPatcher.cs  README.md  StickyMenu.csproj  StickyMenuMod.cs
src/VideoCalls/: CameraMod.cs  README.md  Transmitter.cs  VideoCalls.cs  VideoCalls.csproj  VideoProjector.cs
